<resources>
    <string name="app_name">Instagram Project</string>
    <string name="default_web_client_id">359125911012-ge9lkpil62niqokmbdgkke3e07vqcudc.apps.googleusercontent.com</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="phone_number_field_hint">Enter your phone number</string>
    <string name="phone_number_field_error">Phone number should be of 10 digit</string>
    <string name="cnf_password_field_hint">Confirm your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_feed">Feed</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>

    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>

    <!--signin-->
    <string name="welcometext">Welcome to ShopSpot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fashion_adda">Fashion Adda</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_fill_gender_and_age_to_move_further">Please fill gender and age to move further</string>
    <string name="gender">Gender</string>
    <string name="gender_not_selected">Please select gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="year">Year</string>
    <string name="select_year">Please select year</string>
    <string name="month">Month</string>
    <string name="select_month">Please select month</string>
    <string name="date">Date</string>
    <string name="select_day">Please select Day</string>
    <string name="submit">Submit</string>
    <string name="invalid_user">Invalid User</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
</resources>
