<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
          android:title="@string/menu_home"
          android:titleCondensed="@string/menu_home"
          android:icon="@drawable/selector_home"
          app:showAsAction="always"/>

    <item android:id="@+id/addPhotosFragment"
          android:title="@string/menu_add_photos"
          android:titleCondensed="@string/menu_add_photos"
          android:icon="@drawable/selector_add_photos"
          app:showAsAction="always"/>

    <item
        android:id="@+id/addFeedFragment"
        android:title="@string/menu_feed"
        android:titleCondensed="@string/menu_feed"
        android:icon="@drawable/ic_baseline_dynamic_feed"
        app:showAsAction="always"/>


    <item android:id="@+id/profileFragment"
          android:title="@string/menu_profile"
          android:titleCondensed="@string/menu_profile"
          android:icon="@drawable/selector_profile"
          app:showAsAction="always"/>
</menu>