<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <LinearLayout
            android:id="@+id/llWelcomeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_black"
                android:text="Information"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/segoe_ui_black"
                android:text="@string/please_fill_gender_and_age_to_move_further"
                android:textColor="@color/black_50"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/segoe_uib"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="Male" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Female" />
            </RadioGroup>


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/segoe_uib"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_day"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_roundedborder"
                android:fontFamily="@font/segoe_ui_sb"
                android:gravity="center"
                android:hint="@string/date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_month"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_roundedborder"
                android:fontFamily="@font/segoe_ui_sb"
                android:gravity="center"
                android:hint="@string/month"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_year"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_roundedborder"
                android:fontFamily="@font/segoe_ui_sb"
                android:gravity="center"
                android:hint="@string/year"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/pink_10dp_rect"
            android:fontFamily="@font/segoe_uib"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>

</ScrollView>
