<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <LinearLayout
            android:id="@+id/llWelcomeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_black"
                    android:gravity="center_vertical"
                    android:text="Hi Fella"
                    android:textColor="@color/grey_deeper"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/waving_hand" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_black"
                android:text="Welcome to "
                android:textColor="@color/black"
                android:textSize="28sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_black"
                    android:text="FASHION ADDA"
                    android:textColor="@color/pink_color"
                    android:textSize="28sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_google"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_white_roundedborder"
                    android:fontFamily="@font/segoe_ui_sl"
                    android:gravity="center"
                    android:text="@string/login_with_google"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_google" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_white_roundedborder"
                    android:fontFamily="@font/segoe_ui_sl"
                    android:gravity="center"
                    android:text="@string/login_with_facebook"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_facebook" />

            </RelativeLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/segoe_ui"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/grey_stroke" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/segoe_ui_sl"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_grey_roundedborder"
            android:fontFamily="@font/segoe_ui_sb"
            android:hint="@string/email_field_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/segoe_ui_sl"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_grey_roundedborder"
            android:fontFamily="@font/segoe_ui_sb"
            android:hint="@string/phone_number_field_hint"
            android:inputType="number"
            android:digits="10"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/segoe_ui_sl"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_grey_roundedborder"
            android:fontFamily="@font/segoe_ui_sb"
            android:hint="@string/password_field_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/pink_10dp_rect"
            android:fontFamily="@font/segoe_uib"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"

            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_sb"
                android:text="Already have an account?"
                android:textColor="@color/black_50" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_sb"
                android:gravity="end"
                android:text="@string/login"
                android:textColor="@color/pink_color" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
