<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_sb"
            android:gravity="center"
            android:text="@string/fashion_adda"
            android:textColor="@color/white"
            android:textSize="45sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_pink_5dp_rect"
            android:fontFamily="@font/segoe_ui_sb"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="Dream Fashion App"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:textAllCaps="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/pink_10dp_rect"
                android:text="@string/login"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:fontFamily="@font/segoe_ui_sb"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/pink_10dp_rect"
                android:text="@string/sign_up"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:fontFamily="@font/segoe_ui_sb"
                android:backgroundTint="@color/white"
                android:textColor="@color/black" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>