<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="women.fashion.compare.clothes.shop.womenshopping.offers.ui.landing.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_addFeedFragment"
            app:destination="@id/addFeedFragment" />
        <action
            android:id="@+id/action_homeFragment_to_top_departmentFragment"
            app:destination="@id/top_departmentFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_homeFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
    </fragment>

    <fragment
        android:id="@+id/addFeedFragment"
        android:name="women.fashion.compare.clothes.shop.womenshopping.offers.ui.landing.globalfeed.fragment.GlobalFeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_newsfeed" >
        <action
            android:id="@+id/action_addFeedFragment_to_profileFragment"
            app:destination="@id/top_departmentFragment" />
        <action
            android:id="@+id/action_addFeedFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_addFeedFragment_to_top_departmentFragment"
            app:destination="@id/top_departmentFragment" />
        <action
            android:id="@+id/action_addFeedFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_addFeedFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
    </fragment>

    <fragment
        android:id="@+id/top_departmentFragment"
        android:name="women.fashion.compare.clothes.shop.womenshopping.offers.ui.landing.departments.TopDepartmentsFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_top_departmentFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_top_departmentFragment_to_addFeedFragment"
            app:destination="@id/addFeedFragment" />
        <action
            android:id="@+id/action_top_departmentFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_top_departmentFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="women.fashion.compare.clothes.shop.womenshopping.offers.ui.landing.cart.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
        <action
            android:id="@+id/action_cartFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_cartFragment_to_top_departmentFragment"
            app:destination="@id/top_departmentFragment" />
        <action
            android:id="@+id/action_cartFragment_to_offersFragment2"
            app:destination="@id/offersFragment" />
    </fragment>
    <fragment
        android:id="@+id/offersFragment"
        android:name="women.fashion.compare.clothes.shop.womenshopping.offers.ui.landing.offers.OffersFragment"
        android:label="fragment_offers"
        tools:layout="@layout/fragment_offers" >
        <action
            android:id="@+id/action_offersFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_offersFragment_to_top_departmentFragment"
            app:destination="@id/top_departmentFragment" />
        <action
            android:id="@+id/action_offersFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

</navigation>